--- a/index.html
+++ b/index.html
@@ -11,27 +11,28 @@
 <body>
 
     <header>
-        <h1>Verificador de idade</h1>
+        <h1>Qual a sua idade?</h1>
     </header>
     <article>
+        <div id="baixo">
+            <h3 id="aviso">Preecha os dados acima para ver o resultado!</h5>
+            <img id="imagem" src="img/who.jpg">
+
+        </div>
         <div id ="form">
                 <label>Ano de Nascimento</label>
                 <input type="number" id="nascimento">
                 <br>
-                <label>Sexo</label>
-                    <input type="radio" checked name="Sexo"  value ="masculino">
+                <label id="alguma-coisa"></label>Sexo</label>
+                    <input id="alguma-coisa" type="radio" checked name="Sexo"  value ="masculino">
                     <label for="">masculino </label>
                     <input type="radio" name="Sexo"  value="feminino" >
                     <label for="">Feminino</label>
                     <br>
-                    <input type="button" value="Verificar" onclick="verifica()">
+                    <input type="button" id="botao" value="Verificar" onclick="verifica()">
               
         </div>
-        <div>
-            <h5 id="aviso">Preecha os dados acima para ver o resultado!</h5>
-            <img id="imagem">
-
-        </div>
+        
 
 
     </article>
