--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <title>Document</title>
 </head>
 
-<body>
+<body id= "corpo">
 
     <header>
         <h1>Qual a sua idade?</h1>
@@ -19,6 +19,7 @@
             <img id="imagem" src="img/who.jpg">
 
         </div>
+        
         <div id ="form">
                 <label>Ano de Nascimento</label>
                 <input type="number" id="nascimento">
